--- a/about.html
+++ b/about.html
@@ -190,8 +190,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Adveen Desuza</h5>
-                <h6>UI Designer</h6>
+                <h5>Mostafa Khaled</h5>
+                <h6>Full Stack Developer</h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
@@ -231,8 +231,8 @@
                 />
               </div>
               <div class="ud-team-info">
-                <h5>Jezmin uniya</h5>
-                <h6>Product Designer</h6>
+                <h5>Mohamed AG</h5>
+                <h6>Software Developer</h6>
               </div>
               <ul class="ud-team-socials">
                 <li>
